# linux-gtk

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  REUSE.toml  _typos.toml  deny.toml
.cargo/: config.toml
.gitlab/: sast-ruleset.toml
data/: com.vauchi.desktop.desktop  com.vauchi.desktop.metainfo.xml
debian/: changelog  control  copyright  rules
design/: INVENTORY.md
packaging/: PKGBUILD  appimage.sh  com.vauchi.desktop.yml  vauchi-gtk.spec
src/: app.rs  lib.rs  locale.rs  main.rs  seed_identity.rs
src/core_ui/: action_dispatcher.rs  action_handler.rs  mod.rs  screen_renderer.rs  theme.rs
src/core_ui/components/: action_list.rs  avatar_preview.rs  banner.rs  card_preview.rs  confirmation_dialog.rs  contact_list.rs  divider.rs  dropdown.rs  editable_text.rs  field_list.rs  icons.rs  image_circle.rs  indicator.rs  info_panel.rs  inline_confirm.rs  list.rs  mod.rs  pin_input.rs  preview.rs  qr_code.rs  row.rs  sectioned_action_list.rs  settings_group.rs  show_toast.rs  slider.rs  status_indicator.rs  text.rs  text_input.rs  toggle_list.rs
src/platform/: audio.rs  ble.rs  camera.rs  hardware.rs  header_bar.rs  init.rs  mod.rs  nfc.rs  notifications.rs  screen_capture_protection.rs  tcp_exchange.rs
tests/: component_variants_test.rs  golden_fixture_contract.rs  render_fixture_smoke.rs  smoke_test.rs
tests/atspi/: conftest.py  helpers.py  navigation.py  requirements.txt  run-tests.sh  test_components.py  test_fixture_a11y.py  test_interactions.py  test_keyboard.py  test_launch.py  test_navigation.py  test_screens.py  test_snapshots.py  test_workflows.py
tests/atspi/snapshots/: .gitignore
