# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-gtk"
version = "0.5.0-rc.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Vauchi desktop app for Linux (GTK4 + libadwaita)"

[features]
default = ["audio", "ble"]
audio = ["vauchi-core/audio-cpal"]
ble = ["dep:bluer", "dep:tokio", "dep:tokio-stream"]
camera = ["dep:nokhwa", "dep:rqrr", "dep:image"]

[dependencies]
vauchi-core = { git = "https://gitlab.com/vauchi/core.git", branch = "main", features = ["secure-storage-linux"] }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_2"] }
qrcode = "0.14"

# Audio proximity (ultrasonic via CPAL) — enabled by default
# Uses CpalAudioBackend from vauchi-core

# BLE exchange via BlueZ D-Bus — requires bluetooth adapter
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Camera QR scanning — optional, requires v4l2 dev libraries
nokhwa = { version = "0.10", features = ["input-v4l"], optional = true }
rqrr = { version = "0.9", optional = true }
image = { version = "0.25", optional = true, default-features = false }

[package.metadata.cargo-machete]
ignored = ["image", "nokhwa", "rqrr"]  # optional camera feature deps

[dev-dependencies]
tempfile = "3.0"
