# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-gtk"
version = "0.5.0-rc.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Vauchi desktop app for Linux (GTK4 + libadwaita)"
default-run = "gvauchi"

[[bin]]
name = "gvauchi"
path = "src/main.rs"

[[bin]]
name = "seed-identity"
path = "src/seed_identity.rs"

[features]
default = ["audio", "ble", "camera", "mdns"]
audio = ["vauchi-core/audio-cpal"]
ble = ["dep:bluer", "dep:tokio", "dep:tokio-stream"]
camera = ["dep:nokhwa", "dep:rqrr", "dep:image"]
nfc = ["dep:pcsc"]
mdns = ["dep:mdns-sd"]

[dependencies]
vauchi-core = { git = "https://gitlab.com/vauchi/core.git", branch = "main", features = ["secure-storage-linux"] }
vauchi-app = { git = "https://gitlab.com/vauchi/core.git", branch = "main", features = ["network"] }
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_2"] }
qrcode = "0.14"

# Audio proximity (ultrasonic via CPAL) — enabled by default
# Uses CpalAudioBackend from vauchi-core

# BLE exchange — tokio runtime is portable; bluer itself is target-gated below.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Camera QR scanning — rqrr and image are portable; nokhwa is target-gated below.
rqrr = { version = "0.9", optional = true }
image = { version = "0.25", optional = true, default-features = false }

# NFC exchange via PC/SC (pcsclite) — optional, requires USB NFC reader
pcsc = { version = "2", optional = true }

# mDNS/DNS-SD discovery for USB exchange (finds phone IP on local network)
mdns-sd = { version = "0.11", optional = true }

# Linux-only deps: `bluer` (BlueZ D-Bus, optional) and `nokhwa` with the
# `input-v4l` feature (Video4Linux). Target-gating keeps `cargo clippy`
# green on non-Linux dev machines without dropping `ble`/`camera` from
# the default build on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
nokhwa = { version = "0.10", features = ["input-v4l"], optional = true }

[package.metadata.cargo-machete]
ignored = ["image", "nokhwa", "rqrr", "pcsc"]  # optional feature deps

[dev-dependencies]
serde_json = "1"
tempfile = "3.0"

# Release profile: optimized binary (matches cli/tui)
[profile.release]
lto = true
strip = true
panic = "abort"
overflow-checks = true

# Development profile: fast builds, backtraces work (matches core)
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Test profile: skip full debug info, reduce binary size ~60%
[profile.test]
debug = "line-tables-only"
split-debuginfo = "off"
